[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/difficulty/difficulty.gd" type="Script" id=1]
[ext_resource path="res://backgrounds/Cartoon_Forest_BG_04.png" type="Texture" id=2]
[ext_resource path="res://interface/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=4]

[node name="world" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 0.473633
margin_top = -0.0579834
margin_right = 1920.47
margin_bottom = 1079.94
texture = ExtResource( 2 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
custom_constants/separation = 150

[node name="Title" parent="Container" instance=ExtResource( 3 )]
text = "CHOOSE LEVEL"

[node name="VSplitContainer" type="VSplitContainer" parent="Container"]
margin_top = 307.0
margin_right = 1870.0
margin_bottom = 627.0
custom_constants/separation = 150
dragger_visibility = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Container/VSplitContainer"]
margin_right = 1870.0
margin_bottom = 85.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VSplitContainer/VBoxContainer2"]
margin_right = 1870.0
margin_bottom = 85.0
custom_constants/separation = 70
alignment = 1

[node name="Easy" type="Button" parent="Container/VSplitContainer/VBoxContainer2/HBoxContainer"]
margin_left = 447.0
margin_right = 717.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 4 )
text = "LEVEL 1"

[node name="Difficult" type="Button" parent="Container/VSplitContainer/VBoxContainer2/HBoxContainer"]
margin_left = 787.0
margin_right = 1069.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 4 )
text = "LEVEL 2"

[node name="Lunatic" type="Button" parent="Container/VSplitContainer/VBoxContainer2/HBoxContainer"]
margin_left = 1139.0
margin_right = 1422.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 4 )
text = "LEVEL 3"

[node name="BackButton" type="Button" parent="Container/VSplitContainer"]
margin_left = 832.0
margin_top = 235.0
margin_right = 1038.0
margin_bottom = 320.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "BACK"
[connection signal="pressed" from="Container/VSplitContainer/VBoxContainer2/HBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Container/VSplitContainer/VBoxContainer2/HBoxContainer/Difficult" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="Container/VSplitContainer/VBoxContainer2/HBoxContainer/Lunatic" to="." method="_on_Lunatic_pressed"]
[connection signal="pressed" from="Container/VSplitContainer/BackButton" to="." method="_on_BackButton_pressed"]
